# esp-idf-mqtt-chart

./: CMakeLists.txt  README.md  mqtt_json.sh  mqtt_simple.sh
html/: main.js  root.html
main/: CMakeLists.txt  Kconfig.projbuild  json.h  main.c  mqtt_sub.c  web_client.c  web_server.c
